# pandoc-md2redmine

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  Setup.hs  flake.nix  pandoc-md2redmine.cabal
.github/workflows/: ci.yml
app/: Main.hs
lib/: MyLib.hs
lib/Text/Pandoc/: Md2Redmine.hs
lib/Text/Pandoc/Writers/Textile/: Redmine.hs
nix/: my-package.nix  my-shell.nix
test/cases/case01/: golden  input.md
test/cases/case02/: golden  input.md
test/cases/case03/: golden  input.md
test/doctest/: Doctest.hs
test/spec/: MyLibSpec.hs  Spec.hs
test/spec/Text/Pandoc/Writers/Textile/: RedmineSpec.hs
